# SimpleJNI

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.txt  LICENSE  LICENSE.txt  NOTICE  NOTICE.txt  README.md
.github/workflows/: cmake.yml  publish.yml  test.yml
.tools/: create-release  publish  update-gradle
cmake/: install.cmake  smjni-config.cmake.in  smjni.pc.in
inc/smjni/: config.h  java_array.h  java_cast.h  java_class_table.h  java_frame.h  java_string.h  java_type_traits.h  utf_util.h
io/github/gershnik/smjni-jnigen-annotations/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
io/github/gershnik/smjni-jnigen-annotations/3.5/: smjni-jnigen-annotations-3.5-javadoc.jar.asc  smjni-jnigen-annotations-3.5-javadoc.jar.asc.md5  smjni-jnigen-annotations-3.5-javadoc.jar.asc.sha1  smjni-jnigen-annotations-3.5-javadoc.jar.asc.sha256  smjni-jnigen-annotations-3.5-javadoc.jar.asc.sha512  smjni-jnigen-annotations-3.5-javadoc.jar.md5  smjni-jnigen-annotations-3.5-javadoc.jar.sha1  smjni-jnigen-annotations-3.5-javadoc.jar.sha256  smjni-jnigen-annotations-3.5-javadoc.jar.sha512  smjni-jnigen-annotations-3.5-sources.jar.asc  smjni-jnigen-annotations-3.5-sources.jar.asc.md5  smjni-jnigen-annotations-3.5-sources.jar.asc.sha1  smjni-jnigen-annotations-3.5-sources.jar.asc.sha256  smjni-jnigen-annotations-3.5-sources.jar.asc.sha512  smjni-jnigen-annotations-3.5-sources.jar.md5  smjni-jnigen-annotations-3.5-sources.jar.sha1  smjni-jnigen-annotations-3.5-sources.jar.sha256  smjni-jnigen-annotations-3.5-sources.jar.sha512  smjni-jnigen-annotations-3.5.jar.asc  smjni-jnigen-annotations-3.5.jar.asc.md5  smjni-jnigen-annotations-3.5.jar.asc.sha1  smjni-jnigen-annotations-3.5.jar.asc.sha256  smjni-jnigen-annotations-3.5.jar.asc.sha512  smjni-jnigen-annotations-3.5.jar.md5  smjni-jnigen-annotations-3.5.jar.sha1  smjni-jnigen-annotations-3.5.jar.sha256  smjni-jnigen-annotations-3.5.jar.sha512  smjni-jnigen-annotations-3.5.module  smjni-jnigen-annotations-3.5.module.asc  smjni-jnigen-annotations-3.5.module.asc.md5  smjni-jnigen-annotations-3.5.module.asc.sha1  smjni-jnigen-annotations-3.5.module.asc.sha256  smjni-jnigen-annotations-3.5.module.asc.sha512  smjni-jnigen-annotations-3.5.module.md5  smjni-jnigen-annotations-3.5.module.sha1  smjni-jnigen-annotations-3.5.module.sha256  smjni-jnigen-annotations-3.5.module.sha512  smjni-jnigen-annotations-3.5.pom  smjni-jnigen-annotations-3.5.pom.asc  smjni-jnigen-annotations-3.5.pom.asc.md5  (+7 more)
io/github/gershnik/smjni-jnigen-kprocessor/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
io/github/gershnik/smjni-jnigen-kprocessor/3.5/: smjni-jnigen-kprocessor-3.5-javadoc.jar.asc  smjni-jnigen-kprocessor-3.5-javadoc.jar.asc.md5  smjni-jnigen-kprocessor-3.5-javadoc.jar.asc.sha1  smjni-jnigen-kprocessor-3.5-javadoc.jar.asc.sha256  smjni-jnigen-kprocessor-3.5-javadoc.jar.asc.sha512  smjni-jnigen-kprocessor-3.5-javadoc.jar.md5  smjni-jnigen-kprocessor-3.5-javadoc.jar.sha1  smjni-jnigen-kprocessor-3.5-javadoc.jar.sha256  smjni-jnigen-kprocessor-3.5-javadoc.jar.sha512  smjni-jnigen-kprocessor-3.5-sources.jar.asc  smjni-jnigen-kprocessor-3.5-sources.jar.asc.md5  smjni-jnigen-kprocessor-3.5-sources.jar.asc.sha1  smjni-jnigen-kprocessor-3.5-sources.jar.asc.sha256  smjni-jnigen-kprocessor-3.5-sources.jar.asc.sha512  smjni-jnigen-kprocessor-3.5-sources.jar.md5  smjni-jnigen-kprocessor-3.5-sources.jar.sha1  smjni-jnigen-kprocessor-3.5-sources.jar.sha256  smjni-jnigen-kprocessor-3.5.jar.asc  (+29 more)
io/github/gershnik/smjni-jnigen-processor/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
jnigen/: CMakeLists.txt  build.gradle  build.gradle.kts  publishing.gradle  publishing.gradle.kts  settings.gradle  settings.gradle.kts  versions.properties
jnigen/annotations/: build.gradle  build.gradle.kts
jnigen/gradle/wrapper/: gradle-wrapper.properties
jnigen/kprocessor/: build.gradle  build.gradle.kts
jnigen/kprocessor/test/src/: KJniGenTest.kt  TestUtils.kt
jnigen/processor/: build.gradle  build.gradle.kts
jnigen/processor/test/src/: JniGenTest.kt  TestUtils.kt
jnigen/test_data/sources/basic/: ksp-output.txt
jnigen/test_data/sources/exposed_only/: kapt-output.txt  ksp-output.txt
jnigen/test_data/sources/full/: args.properties  kapt-output.txt  ksp-output.txt
jnigen/test_data/sources/java/: kapt-output.txt  ksp-output.txt
samples/: common-proguard-rules.pro  common.gradle  libs.versions.toml
samples/android/java/: build.gradle  settings.gradle
samples/android/java/app/: .gitignore  build.gradle
samples/android/kotlin-kapt/: build.gradle  settings.gradle
samples/android/kotlin-kapt/app/: build.gradle
samples/android/kotlin-ksp/: build.gradle  settings.gradle
samples/android/kotlin-ksp-kts/: build.gradle.kts  settings.gradle.kts
samples/android/kotlin-ksp-kts/app/: build.gradle.kts
samples/android/kotlin-ksp/app/: .gitignore  build.gradle
samples/cpp/: CMakeLists.txt  myapplication.cpp
src/: java_exception.cpp  java_externals.cpp  java_field.cpp  java_method.cpp  java_runtime.cpp  java_string.cpp  jni_provider.cpp
tests/: .gitignore  CMakeLists.txt  build.gradle
tests/android/: .gitignore  CMakeLists.txt  build.gradle  run-app.py  settings.gradle
tests/android/app/: build.gradle  proguard-rules.pro
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/java/com/example/smjni_test/: TestContentProvider.java
tests/android/app/src/main/res/values/: strings.xml  themes.xml
tests/android/app/src/main/res/values-night/: themes.xml
tests/android/gradle/wrapper/: gradle-wrapper.properties
tests/desktop/: CMakeLists.txt  build.gradle
tests/gradle/wrapper/: gradle-wrapper.properties
tests/src/cpp/: CMakeLists.txt  array_tests.cpp  integration_tests.cpp  java_ref_tests.cpp  smjnitests.cpp  string_tests.cpp  utf_tests.cpp
tests/src/java/smjni/tests/: TestSimpleJNI.java
(+127 files in other folders)
